--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <h1>Un super titre</h1>
+        <h1>oh snap, un super john apparait</h1>
     </body>
 </html>
